página web finalizada

--- a/index.html
+++ b/index.html
@@ -238,6 +238,75 @@
         </div>
     </div>
 
+    <div class="clientes">
+        <p class="titulo-cliente">O que nossos clientes <br> estão dizendo?</p>
+        <div class="card-cliente">
+            <div class="cartao-cliente">
+                <img class="img-cliente" src="depo1.png" alt="">
+                <p class="comentario-cliente">“Secure and Transparent <br> Transactions”</p>
+                <p class="texto-cliente">Massa malesuada aliquam fames senectus vitae ornare. Fringilla sit varius mattis ultricies sed nulla.</p>
+                <p class="nome-cliente">James Reynolds</p>
+                <p class="empresa-cliente">Cybersecurity Consultant</p>
+            </div>
+            <div class="cartao-cliente">
+                <img class="img-cliente" src="depo1.png" alt="">
+                <p class="comentario-cliente">“Secure and Transparent <br> Transactions”</p>
+                <p class="texto-cliente">Massa malesuada aliquam fames senectus vitae ornare. Fringilla sit varius mattis ultricies sed nulla.</p>
+                <p class="nome-cliente">James Reynolds</p>
+                <p class="empresa-cliente">Cybersecurity Consultant</p>
+            </div>
+            <div class="cartao-cliente">
+                <img class="img-cliente" src="depo1.png" alt="">
+                <p class="comentario-cliente">“Secure and Transparent <br> Transactions”</p>
+                <p class="texto-cliente">Massa malesuada aliquam fames senectus vitae ornare. Fringilla sit varius mattis ultricies sed nulla.</p>
+                <p class="nome-cliente">James Reynolds</p>
+                <p class="empresa-cliente">Cybersecurity Consultant</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="contato">
+        <p class="texto-contato">Fale conosco!</p>
+        <div class="card-contato">
+            <div>
+                <div data-respondi-container="" data-respondi-mode="regular" data-respondi-src="https://form.respondi.app/n3egLNKZ" data-respondi-width="535px" data-respondi-height="327px"></div><script>const bodyScript=document.querySelector('body'),hasScript=document.querySelector('#respondi_src');if(!hasScript){const script=document.createElement('script');script.setAttribute("async", "");document.body.appendChild(script),script.id='respondi_src',script.src='https://embed.respondi.app/embed.js';}</script>
+            </div>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15354.828280152069!2d-48.0695473!3d-15.8193925!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a33a4fbf741d3%3A0xe6f0914dedea83b2!2sOptimer%20contabilidade!5e0!3m2!1spt-BR!2sbr!4v1709749420218!5m2!1spt-BR!2sbr" width="380" height="327" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-um">
+            <p class="texto-footer">OPTIMER CONTABILIDADE</p>
+            <p class="legenda-footer">Euismod libero faucibus egestas elementum scelerisque porta commodo purus nam. Ante ac egestas duis</p>
+            <div class="redes">
+                <a href=""><img src="insta.png" alt=""></a>
+                <a href=""><img src="face.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-dois">
+            <ul class="lista-footer">
+                <li><a class="texto-footer" href="">Empesa</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Sobre nós</a></li>
+                <li><a href="">Serviços</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
+        </div>
+        <div class="footer-tres">
+            <p class="texto-footer">Receba nossas novidades!</p>
+            <div data-respondi-container="" data-respondi-mode="regular" data-respondi-src="https://form.respondi.app/OyIgBOR1" data-respondi-width="325" data-respondi-height="150px"></div><script>const bodyScript=document.querySelector('body'),hasScript=document.querySelector('#respondi_src');if(!hasScript){const script=document.createElement('script');script.setAttribute("async", "");document.body.appendChild(script),script.id='respondi_src',script.src='https://embed.respondi.app/embed.js';}</script>
+        </div>
+    </footer>
+
+    <div class="copy">
+        <p>Copyright © 2024 Optimer Contabilidade</p>
+        <p>Design THRUST MARKETING</p>
+    </div>
+
 
     
    
