--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="sobre">
         <div class="card-sobre">
             <div class="img-sobre">
-                <img src="iPhone 14 & 15 Pro Max - 1.png" alt="">
+                <img src="iPhone 14 & 15 Pro Max - 1.png" alt="" class="img-iphone" >
             </div>
 
             <div class="texto-sobre">
@@ -202,7 +202,7 @@
                         <img class="icone-d" src="icone-d.png" alt="">
                     </div>
                     <div class="card-icone-sobre">
-                        <p class="texto-icone-sobre">+ REDUÇÃO DE CUSTOS PARA SUA EMPRESA</p>
+                        <p class="texto-icone-sobre">+ REDUÇÃO DE CUSTOS </p>
                         <img class="icone-d" src="icone-d.png" alt="">
                     </div>
                     <div class="card-icone-sobre">
@@ -269,10 +269,10 @@
     <div class="contato">
         <p class="texto-contato">Fale conosco!</p>
         <div class="card-contato">
-            <div>
-                <div data-respondi-container="" data-respondi-mode="regular" data-respondi-src="https://form.respondi.app/n3egLNKZ" data-respondi-width="535px" data-respondi-height="327px"></div><script>const bodyScript=document.querySelector('body'),hasScript=document.querySelector('#respondi_src');if(!hasScript){const script=document.createElement('script');script.setAttribute("async", "");document.body.appendChild(script),script.id='respondi_src',script.src='https://embed.respondi.app/embed.js';}</script>
+            <div class="form">
+                <div data-respondi-container="" data-respondi-mode="regular" data-respondi-src="https://form.respondi.app/n3egLNKZ" data-respondi-width="400px" data-respondi-height="327px"></div><script>const bodyScript=document.querySelector('body'),hasScript=document.querySelector('#respondi_src');if(!hasScript){const script=document.createElement('script');script.setAttribute("async", "");document.body.appendChild(script),script.id='respondi_src',script.src='https://embed.respondi.app/embed.js';}</script>
             </div>
-            <div>
+            <div class="mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15354.828280152069!2d-48.0695473!3d-15.8193925!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a33a4fbf741d3%3A0xe6f0914dedea83b2!2sOptimer%20contabilidade!5e0!3m2!1spt-BR!2sbr!4v1709749420218!5m2!1spt-BR!2sbr" width="380" height="327" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
