ajuste versão mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body onresize="mudouTamanho()">
     <nav>
-        <a href=""><div class="logo"><img class="logo" src="logo.svg" alt=""></div></a>
+        <a href=""><div class="logo"><img class="logo" src="logo-principal.png" alt=""></div></a>
 
         <div class="icones">
             <button class="botao"><span id="burguer" class="material-icons md-48" onclick="clickMenu()" >menu</span></button>
@@ -29,7 +29,7 @@
     <div class="section-um">
         <div class="texto-card">
             <p class="titulo-um">Acessoria <br> contábil OPTIMER</p>
-            <br><br>
+            <br>
             <p class="texto-um">Nosso escritório contábil é dedicado em entregar 
             com qualidade serviços especializados para empresas
             dos mais complexos ramos, Oferecendo um modelo de negócio 
@@ -41,32 +41,34 @@
                 <div class="bt-saiba-mais"><a href=""><img src="bt-saiba-mais.svg" alt=""></a></div>
             </div>
         </div>
-        <img class="img-principal" src="img-principal.png" alt="" height="600px">
+        <div class="div-img-principal">
+            <img class="img-principal" src="img-principal.png" alt="" height="600px">
+        </div>     
     </div>
     
     <div class="section-dois">
         <div class="card-dois">
             <a href="">
-                <img src="icone-section-um.svg" alt="">
-                <p>Seguro de <br> Responsabilidade Técnica</p>
+                <img class="icone-dois" src="icone-section-um.svg" alt="">
+                <p>Seguros </p>
             </a>
         </div>
         <div class="card-dois">
             <a href="">
-                <img src="icone-money.svg" alt="">
-                <p>Consultoria Externa</p>
+                <img class="icone-dois" src="icone-money.svg" alt="">
+                <p>Consultoria</p>
             </a>
         </div>
         <div class="card-dois">
             <a href="">
-                <img src="icone-web.svg" alt="">
-                <p>Plataforma via Web</p>
+                <img class="icone-dois" src="icone-web.svg" alt="">
+                <p>Web</p>
             </a>
         </div>
         <div class="card-dois">
             <a href="">
-                <img src="icone-bild.svg" alt="">
-                <p>Estudo Tributário</p>
+                <img class="icone-dois" src="icone-bild.svg" alt="">
+                <p>Tributário</p>
             </a>
         </div>
     </div>
@@ -228,12 +230,12 @@
         </div>
         <div class="card-blog">
             <div class="cartao-blog">
-                <img class="img-blog" src="blog-um.png" alt="">
+                <img class="img-blog" src="blog-3.png" alt="">
                 <p class="titulo-card-blog">Título</p>
                 <p class="legenda-card-blog">Subtítulo</p>
             </div>
             <div class="cartao-blog">
-                <img class="img-blog" src="blog-um.png" alt="">
+                <img class="img-blog" src="blog-4.png" alt="">
                 <p class="titulo-card-blog">Título</p>
                 <p class="legenda-card-blog">Subtítulo</p>
             </div>
