--- a/index.html
+++ b/index.html
@@ -232,7 +232,10 @@
             <div class="cartao-blog">
                 <img class="img-blog" src="blog-3.png" alt="">
                 <p class="titulo-card-blog">Título</p>
-                <p class="legenda-card-blog">Subtítulo</p>
+                <div id="minhaDiv" style="display: none;">
+                    <p class="texto-ver-mais">O tempo de abertura de uma empresa pode variar dependendo de cada situação e do tipo de atividade comercial, mas podemos dizer que em média leva em torno de 20 dias.</p>
+                </div>
+                <button class="bt-ver-mais" id="btn" type="button" onclick="Mudarestado('minhaDiv')">Ver mais</button>
             </div>
             <div class="cartao-blog">
                 <img class="img-blog" src="blog-4.png" alt="">
@@ -340,6 +343,21 @@
         AOS.init({
             duration: 1000,
         });
+    </script>
+
+    <script>
+        function Mudarestado(el) {
+  var display = document.getElementById(el).style.display;
+  var botao = document.getElementById("btn");
+
+  if (display == "none") {
+    document.getElementById(el).style.display = 'block';
+    botao.innerHTML = "Ver menos";
+  } else {
+    document.getElementById(el).style.display = 'none';
+    botao.innerHTML = "Ver mais";
+  }
+}
     </script>
 
 
