--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
 
     <div class="blog" data-aos="fade-right">
         <div class="texto-blog">
-            <p class="titulo-blog">Confira nosso blog</p>
-            <a class="bt-blog" href="">Acessar blog</a>
+            <p class="titulo-blog">Tire suas dúvidas</p>
+            <a class="bt-blog" href="">Entre em contato</a>
         </div>
         <div class="card-blog">
             <div class="cartao-blog">
                 <img class="img-blog" src="blog-3.png" alt="">
-                <p class="titulo-card-blog">Título</p>
+                <p class="titulo-card-blog">Quer abrir sua empresa?</p>
                 <div id="minhaDiv" style="display: none;">
                     <p class="texto-ver-mais">O tempo de abertura de uma empresa pode variar dependendo de cada situação e do tipo de atividade comercial, mas podemos dizer que em média leva em torno de 20 dias.</p>
                 </div>
@@ -239,13 +239,24 @@
             </div>
             <div class="cartao-blog">
                 <img class="img-blog" src="blog-4.png" alt="">
-                <p class="titulo-card-blog">Título</p>
-                <p class="legenda-card-blog">Subtítulo</p>
+                <p class="titulo-card-blog">Mudado MEI para ME</p>
+                <div id="minhaDiv2" style="display: none;">
+                    <p class="texto-ver-mais">1 - Avaliação da situação atual do MEI. <br>
+                        2 - Revisão dos documentos contábeis. <br>
+                        3 - Registro na Junta Comercial ou Cartório. <br>
+                        4 - Alteração do regime tributário, se necessário. <br>
+                        5 - Regularização fiscal.</p>
+                </div>
+                <button class="bt-ver-mais" id="btn2" type="button" onclick="Mudarestado2('minhaDiv2')">Ver mais</button>
             </div>
             <div class="cartao-blog">
                 <img class="img-blog" src="blog-um.png" alt="">
-                <p class="titulo-card-blog">Título</p>
-                <p class="legenda-card-blog">Subtítulo</p>
+                <p class="titulo-card-blog">Documentação necessária</p>
+                <div id="minhaDiv3" style="display: none;">
+                    <p class="texto-ver-mais">Os documentos necessários para abrir uma empresa são: RG, CPF, título de eleitor, comprovantes de endereço residencial e comercial, declaração do imposto de renda, cópia do IPTU.</p>
+                </div>
+                <button class="bt-ver-mais" id="btn3" type="button" onclick="Mudarestado3('minhaDiv3')">Ver mais</button>
+            </div>
             </div>
         </div>
     </div>
@@ -359,6 +370,36 @@
   }
 }
     </script>
+
+<script>
+    function Mudarestado2(el) {
+var display = document.getElementById(el).style.display;
+var botao = document.getElementById("btn2");
+
+if (display == "none") {
+document.getElementById(el).style.display = 'block';
+botao.innerHTML = "Ver menos";
+} else {
+document.getElementById(el).style.display = 'none';
+botao.innerHTML = "Ver mais";
+}
+}
+</script>
+
+<script>
+    function Mudarestado3(el) {
+var display = document.getElementById(el).style.display;
+var botao = document.getElementById("btn3");
+
+if (display == "none") {
+document.getElementById(el).style.display = 'block';
+botao.innerHTML = "Ver menos";
+} else {
+document.getElementById(el).style.display = 'none';
+botao.innerHTML = "Ver mais";
+}
+}
+</script>
 
 
     
