ajuste lineheight footer e ajuste depoimentos

--- a/index.html
+++ b/index.html
@@ -266,24 +266,24 @@
         <div class="card-cliente">
             <div class="cartao-cliente">
                 <img class="img-cliente" src="depo1.png" alt="">
-                <p class="comentario-cliente">“Secure and Transparent <br> Transactions”</p>
-                <p class="texto-cliente">Massa malesuada aliquam fames senectus vitae ornare. Fringilla sit varius mattis ultricies sed nulla.</p>
-                <p class="nome-cliente">James Reynolds</p>
-                <p class="empresa-cliente">Cybersecurity Consultant</p>
+                <p class="comentario-cliente">“Ágeis e Eficientes”</p>
+                <p class="texto-cliente">"Optimer Contabilidade tornou fácil a transição do MEI para ME. Profissionais ágeis e eficientes. Recomendo!"</p>
+                <p class="nome-cliente">Rodrigo Alvez</p>
+                <p class="empresa-cliente">Alfa Construções</p>
             </div>
             <div class="cartao-cliente">
                 <img class="img-cliente" src="depo1.png" alt="">
-                <p class="comentario-cliente">“Secure and Transparent <br> Transactions”</p>
-                <p class="texto-cliente">Massa malesuada aliquam fames senectus vitae ornare. Fringilla sit varius mattis ultricies sed nulla.</p>
-                <p class="nome-cliente">James Reynolds</p>
-                <p class="empresa-cliente">Cybersecurity Consultant</p>
+                <p class="comentario-cliente">“Rápidos e Prestativos”</p>
+                <p class="texto-cliente">"Foi incrivelmente rápida na abertura da minha empresa. Em poucos dias, tudo estava pronto e em ordem. Excelente!"</p>
+                <p class="nome-cliente">Lais Freitas</p>
+                <p class="empresa-cliente">Gardenia Floricultura</p>
             </div>
             <div class="cartao-cliente">
                 <img class="img-cliente" src="depo1.png" alt="">
-                <p class="comentario-cliente">“Secure and Transparent <br> Transactions”</p>
-                <p class="texto-cliente">Massa malesuada aliquam fames senectus vitae ornare. Fringilla sit varius mattis ultricies sed nulla.</p>
-                <p class="nome-cliente">James Reynolds</p>
-                <p class="empresa-cliente">Cybersecurity Consultant</p>
+                <p class="comentario-cliente">“Eficientes e Atenciosos”</p>
+                <p class="texto-cliente">"O atendimento da Optimer foi excelente! Equipe prestativa, eficiente e comunicativa. Índico muito!"</p>
+                <p class="nome-cliente">Gabriel Paiva</p>
+                <p class="empresa-cliente">TechSolutions Ltda</p>
             </div>
 
         </div>
