adicionando âcora do footer

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
     <div class="copy">
         <p>Copyright © 2024 Optimer Contabilidade</p>
-        <p>Design THRUST MARKETING</p>
+        <a href="https://www.instagram.com/thrustmaarketing/"><p>Design THRUST MARKETING</p></a>
     </div>
 
     <script>
