--- a/index.html
+++ b/index.html
@@ -100,79 +100,67 @@
     <div class="servico">
         <div class="card-servico">
             <a href="">
-                <img src="icone-animado.gif" alt="" class="img-servico">
-                <p class="titulo-servico">Legalização de empresas</p>
+                <img src="analise.gif" alt="" class="img-servico">
+                <p class="titulo-servico">Departamento pessoal</p>
                 <br>
-                <p class="texto-servico">Ao abrir um negócio, uma das 
-                    primeiras coisas a serem decididas é a estrutura 
-                    jurídica, a Controller é parte essencial nesse projeto 
-                    para garantir que a sua empresa esteja devidamente 
-                    legalizada para com as obrigações.
+                <p class="texto-servico">Orientação e controle de aplicação dos preceitos da
+                    Consolidação das Leis do Trabalho  sendo responsável por cuidar de todas as questões relacionadas aos colaboradores.
                 </p>
             </a>
         </div>
         <div class="card-servico">
             <a href="">
-                <img src="escudo.gif" alt="" class="img-servico" width="50px">
-                <p class="titulo-servico">Legalização de empresas</p>
+                <img src="engrenagem.gif" alt="" class="img-servico" width="50px">
+                <p class="titulo-servico">Departamento empresarial</p>
                 <br>
-                <p class="texto-servico">Ao abrir um negócio, uma das 
-                    primeiras coisas a serem decididas é a estrutura 
-                    jurídica, a Controller é parte essencial nesse projeto 
-                    para garantir que a sua empresa esteja devidamente 
-                    legalizada para com as obrigações.
+                <p class="texto-servico">O atendimento inicial de um cliente em potencial para
+                    nossa empresa se faz através de um profissional do
+                    departamento societário.
                 </p>
             </a>
         </div>
         <div class="card-servico">
             <a href="">
-                <img src="icone-caderno.svg" alt="" class="img-servico">
-                <p class="titulo-servico">Legalização de empresas</p>
+                <img src="prancheta.gif" alt="" class="img-servico" width="50px">
+                <p class="titulo-servico">Departamento contábil</p>
                 <br>
-                <p class="texto-servico">Ao abrir um negócio, uma das 
-                    primeiras coisas a serem decididas é a estrutura 
-                    jurídica, a Controller é parte essencial nesse projeto 
-                    para garantir que a sua empresa esteja devidamente 
-                    legalizada para com as obrigações.
+                <p class="texto-servico">Faz a verificação dos dados e a análise dos fatos
+                    contábeis que são fundamentais para uma correta
+                    tomada de decisões no processo de planejamento
+                    empresarial..
                 </p>
             </a>
         </div>
         <div class="card-servico">
             <a href="">
-                <img src="icone-caderno.svg" alt="" class="img-servico">
-                <p class="titulo-servico">Legalização de empresas</p>
+                <img src="caderno-verificado.gif" alt="" class="img-servico" width="50px">
+                <p class="titulo-servico">Departamento fiscal</p>
                 <br>
-                <p class="texto-servico">Ao abrir um negócio, uma das 
-                    primeiras coisas a serem decididas é a estrutura 
-                    jurídica, a Controller é parte essencial nesse projeto 
-                    para garantir que a sua empresa esteja devidamente 
-                    legalizada para com as obrigações.
+                <p class="texto-servico">Conte com eles para orientação das constantes
+                    alterações na legislação tributária que causam grande
+                    impacto no planejamento tributário das empresas.
                 </p>
             </a>
         </div>
         <div class="card-servico">
             <a href="">
-                <img src="icone-caderno.svg" alt="" class="img-servico">
-                <p class="titulo-servico">Legalização de empresas</p>
+                <img src="certo.gif" alt="" class="img-servico" width="50px">
+                <p class="titulo-servico">Imposto de renda</p>
                 <br>
-                <p class="texto-servico">Ao abrir um negócio, uma das 
-                    primeiras coisas a serem decididas é a estrutura 
-                    jurídica, a Controller é parte essencial nesse projeto 
-                    para garantir que a sua empresa esteja devidamente 
-                    legalizada para com as obrigações.
+                <p class="texto-servico">Disponibilizam uma dedicação especial no ato da
+                    elaboração de sua Declaração de Imposto de Renda
+                    Pessoa Física
                 </p>
             </a>
         </div>
         <div class="card-servico">
             <a href="">
-                <img src="icone-caderno.svg" alt="" class="img-servico">
-                <p class="titulo-servico">Legalização de empresas</p>
+                <img src="folhas.gif" alt="" class="img-servico">
+                <p class="titulo-servico">Ecritório virtual</p>
                 <br>
-                <p class="texto-servico">Ao abrir um negócio, uma das 
-                    primeiras coisas a serem decididas é a estrutura 
-                    jurídica, a Controller é parte essencial nesse projeto 
-                    para garantir que a sua empresa esteja devidamente 
-                    legalizada para com as obrigações.
+                <p class="texto-servico">Escritório Virtual é a solução para quem busca registrar
+                    e legalizar sua atividade de forma simples, rápida e
+                    prática.
                 </p>
             </a>
         </div>
