ajuste legenda suporte mobile

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <p class="titulo-servico-laranja">Conheça nossos serviços</p>
     <br><br>
-    <p class="legenda-servico-branco">Id eleifend quis urna tellus tempor facilisis at semper ac. Interdum tortor ut ac ullamcorper ac <br> et facilisis.</p>
+    <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
     <div class="servico">
         <div class="card-servico">
             <a href="">
