ajuste legenda suporte

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div>
                     <p class="titulo-suporte">Assessoria Contábil que da <br> Suporte ao seu crescimento</p>
                     <br>
-                    <p class="legenda-suporte">Id eleifend quis urna tellus tempor facilisis at semper ac. Interdum <br> tortor ut ac ullamcorper ac et facilisis.</p>
+                    <p class="legenda-suporte">Aqui na Optimer oferecemos o melhor suporte do mercado para sua empresa.</p>
                 </div>
                 <div>
                     <a class="bt-suporte" href="">Entre em contato</a>
