adicionando ancoras do menu

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
 
         <ul class="menu-lista" id="itens">
-            <li><a class="menu-item" href="">Home</a></li>
-            <li><a class="menu-item" href="">Sobre nós</a></li>
-            <li><a class="menu-item" href="">Serviços</a></li>
-            <li><a class="menu-item" href="">contato</a></li> 
+            <li><a class="menu-item" href="index.html">Home</a></li>
+            <li><a class="menu-item" href="#anchor">Sobre nós</a></li>
+            <li><a class="menu-item" href="#anchor2">Serviços</a></li>
+            <li><a class="menu-item" href="#anchor3">contato</a></li> 
         </ul>
         <a class="bt-um" href="">ENTRE EM CONTATO</a>
     </nav>
@@ -94,7 +94,7 @@
         <img src="clientes-laranja.png" alt="" width="100%">
     </div>
 
-    <p class="titulo-servico-laranja">Conheça nossos serviços</p>
+    <p id="anchor2" class="titulo-servico-laranja">Conheça nossos serviços</p>
     <br><br>
     <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
     <div class="servico">
@@ -182,7 +182,7 @@
         </div>
     </div>
 
-    <div class="sobre" data-aos="fade-up">
+    <div id="anchor" class="sobre" data-aos="fade-up">
         <div class="card-sobre">
             <div class="img-sobre">
                 <img src="iPhone 14 & 15 Pro Max - 1.png" alt="" class="img-iphone" >
@@ -277,7 +277,7 @@
         </div>
     </div>
 
-    <div class="contato" data-aos="fade-up">
+    <div id="anchor3" class="contato" data-aos="fade-up">
         <p class="texto-contato">Fale conosco!</p>
         <div class="card-contato">
             <div class="form">
