ajuste texto sobre nós

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <img class="icone-d" src="icone-d.png" alt="">
                     </div>
                     <div class="card-icone-sobre">
-                        <p class="texto-icone-sobre">EFICIÊNCIA, INOVAÇÃO E CREDIBILIDADE</p>
+                        <p class="texto-icone-sobre">+ EFICIÊNCIA, INOVAÇÃO E CREDIBILIDADE</p>
                         <img class="icone-d" src="icone-d.png" alt="">
                     </div>
                 </div>
@@ -301,10 +301,10 @@
         <div class="footer-dois">
             <ul class="lista-footer">
                 <li><a class="texto-footer" href="">Empesa</a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Sobre nós</a></li>
-                <li><a href="">Serviços</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#anchor">Sobre nós</a></li>
+                <li><a href="#anchor2">Serviços</a></li>
+                <li><a href="#anchor3">Contato</a></li>
             </ul>
         </div>
         <div class="footer-tres">
