ajuste de icones

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="servico">
         <div class="card-servico">
             <a href="">
-                <img src="folhas.gif" alt="" class="img-servico">
+                <img src="lista.gif" alt="" class="img-servico">
                 <p class="titulo-servico">Departamento pessoal</p>
                 <br>
                 <p class="texto-servico">Orientação e controle de aplicação dos preceitos da
