tste de seta laranja

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body onresize="mudouTamanho()">
+    <a href="index.html"><img class="topo" src="seta-top.png" alt=""></a>
     <nav>
         <a href=""><div class="logo"><img class="logo" src="logo-principal.png" alt=""></div></a>
 
