--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body onresize="mudouTamanho()">
-    <a href="index.html"><img class="topo" src="seta-top.png" alt=""></a>
+    <a href="index.html"><img class="topo" src="seta-cinza-2.png" alt=""></a>
     <nav>
         <a href=""><div class="logo"><img class="logo" src="logo-principal.png" alt=""></div></a>
 
@@ -254,21 +254,21 @@
         <p class="titulo-cliente">O que nossos clientes <br> estão dizendo?</p>
         <div class="card-cliente">
             <div class="cartao-cliente">
-                <img class="img-cliente" src="depo1.png" alt="">
+                <img class="img-cliente" src="npc2-optimer.jpeg" alt="">
                 <p class="comentario-cliente">“Ágeis e Eficientes”</p>
                 <p class="texto-cliente">"Optimer Contabilidade tornou fácil a transição do MEI para ME. Profissionais ágeis e eficientes. Recomendo!"</p>
                 <p class="nome-cliente">Rodrigo Alvez</p>
                 <p class="empresa-cliente">Alfa Construções</p>
             </div>
             <div class="cartao-cliente">
-                <img class="img-cliente" src="depo1.png" alt="">
+                <img class="img-cliente" src="npc3-optimer.jpeg" alt="">
                 <p class="comentario-cliente">“Rápidos e Prestativos”</p>
                 <p class="texto-cliente">"Foi incrivelmente rápida na abertura da minha empresa. Em poucos dias, tudo estava pronto e em ordem. Excelente!"</p>
                 <p class="nome-cliente">Lais Freitas</p>
                 <p class="empresa-cliente">Gardenia Floricultura</p>
             </div>
             <div class="cartao-cliente">
-                <img class="img-cliente" src="depo1.png" alt="">
+                <img class="img-cliente" src="npc4-optimer.jpeg" alt="">
                 <p class="comentario-cliente">“Eficientes e Atenciosos”</p>
                 <p class="texto-cliente">"O atendimento da Optimer foi excelente! Equipe prestativa, eficiente e comunicativa. Índico muito!"</p>
                 <p class="nome-cliente">Gabriel Paiva</p>
