ajuste clientes fotos

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <img class="img-blog" src="blog-3.png" alt="">
                 <p class="titulo-card-blog">Quer abrir sua empresa?</p>
                 <div id="minhaDiv" style="display: none;">
-                    <p class="texto-ver-mais">O tempo de abertura de uma empresa pode variar dependendo de cada situação e do tipo de atividade comercial, mas podemos dizer que em média leva em torno de 20 dias.</p>
+                    <p class="texto-ver-mais">O tempo de abertura de uma empresa pode variar dependendo de cada situação e do tipo de atividade comercial, mas podemos dizer que em média 72h.</p>
                 </div>
                 <button class="bt-ver-mais" id="btn" type="button" onclick="Mudarestado('minhaDiv')">Ver mais</button>
             </div>
