--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a class="menu-item" href="#anchor2">Serviços</a></li>
             <li><a class="menu-item" href="#anchor3">contato</a></li> 
         </ul>
-        <a class="bt-um" href="">ENTRE EM CONTATO</a>
+        <a class="bt-um" href="https://wa.me/5561998495476">ENTRE EM CONTATO</a>
     </nav>
     <hr class="linha">
     
@@ -49,28 +49,28 @@
     
     <div class="section-dois">
         <div class="card-dois">
-            <a href="">
+            <div>
                 <img class="icone-dois" src="icone-section-um.svg" alt="">
                 <p>Seguros </p>
-            </a>
+            </div>
         </div>
         <div class="card-dois">
-            <a href="">
+            <div>
                 <img class="icone-dois" src="icone-money.svg" alt="">
                 <p>Consultoria</p>
-            </a>
+            </div>
         </div>
         <div class="card-dois">
-            <a href="">
+            <div>
                 <img class="icone-dois" src="icone-web.svg" alt="">
                 <p>Web</p>
-            </a>
+            </div>
         </div>
         <div class="card-dois">
-            <a href="">
+            <div>
                 <img class="icone-dois" src="icone-bild.svg" alt="">
                 <p>Tributário</p>
-            </a>
+            </div>
         </div>
     </div>
 
