ajuste âncoras serviços

--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
     <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
     <div class="servico">
         <div class="card-servico">
-            <a href="">
+            <div>
                 <img src="carregamento.gif" alt="" class="img-servico" width="50px">
                 <p class="titulo-servico">Departamento pessoal</p>
                 <br>
                 <p class="texto-servico">Orientação e controle de aplicação dos preceitos da
                     Consolidação das Leis do Trabalho  sendo responsável por cuidar de todas as questões relacionadas aos colaboradores.
                 </p>
-            </a>
+            </div>
         </div>
         <div class="card-servico">
-            <a href="">
+            <div>
                 <img src="engrenagem.gif" alt="" class="img-servico" width="50px">
                 <p class="titulo-servico">Departamento empresarial</p>
                 <br>
@@ -118,10 +118,10 @@
                     nossa empresa se faz através de um profissional do
                     departamento societário.
                 </p>
-            </a>
+            </div>
         </div>
         <div class="card-servico">
-            <a href="">
+            <div>
                 <img src="prancheta.gif" alt="" class="img-servico" width="50px">
                 <p class="titulo-servico">Departamento contábil</p>
                 <br>
@@ -130,10 +130,10 @@
                     tomada de decisões no processo de planejamento
                     empresarial..
                 </p>
-            </a>
+            </div>
         </div>
         <div class="card-servico">
-            <a href="">
+            <div>
                 <img src="caderno-verificado.gif" alt="" class="img-servico" width="50px">
                 <p class="titulo-servico">Departamento fiscal</p>
                 <br>
@@ -141,10 +141,10 @@
                     alterações na legislação tributária que causam grande
                     impacto no planejamento tributário das empresas.
                 </p>
-            </a>
+            </div>
         </div>
         <div class="card-servico">
-            <a href="">
+            <div>
                 <img src="certo.gif" alt="" class="img-servico" width="50px">
                 <p class="titulo-servico">Imposto de renda</p>
                 <br>
@@ -152,10 +152,10 @@
                     elaboração de sua Declaração de Imposto de Renda
                     Pessoa Física
                 </p>
-            </a>
+            </div>
         </div>
         <div class="card-servico">
-            <a href="">
+            <div>
                 <img src="internet.gif" alt="" class="img-servico">
                 <p class="titulo-servico">Ecritório virtual</p>
                 <br>
@@ -163,7 +163,7 @@
                     e legalizar sua atividade de forma simples, rápida e
                     prática.
                 </p>
-            </a>
+            </div>
         </div>
     </div>
 
