--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <img src="img-section-dois.png" alt="" class="img-section-tres">
     </div>
     
-    <div class="clientes" data-aos="fade-right">
+    <div class="clientes" data-aos="fade-up">
         <img src="clientes-laranja.png" alt="" width="100%">
     </div>
 
