ajuste section serviços

--- a/index.html
+++ b/index.html
@@ -74,74 +74,76 @@
         </div>
     </div>
 
-    <p id="anchor2" class="titulo-servico-laranja">Conheça nossos serviços</p>
-    <br><br>
-    <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
-    <div class="servico">
-        <div class="card-servico">
-            <div>
-                <img src="carregamento.gif" alt="" class="img-servico" width="50px">
-                <p class="titulo-servico">Departamento pessoal</p>
-                <br>
-                <p class="texto-servico">Orientação e controle de aplicação dos preceitos da
-                    Consolidação das Leis do Trabalho  sendo responsável por cuidar de todas as questões relacionadas aos colaboradores.
-                </p>
+    <div data-aos="fade-up" >
+        <p id="anchor2" class="titulo-servico-laranja">Conheça nossos serviços</p>
+        <br><br>
+        <p class="legenda-servico-branco">Confira abaixo alguns dos serviços oferecidos pela optimer</p>
+        <div class="servico">
+            <div class="card-servico">
+                <div>
+                    <img src="carregamento.gif" alt="" class="img-servico" width="50px">
+                    <p class="titulo-servico">Departamento pessoal</p>
+                    <br>
+                    <p class="texto-servico">Orientação e controle de aplicação dos preceitos da
+                        Consolidação das Leis do Trabalho  sendo responsável por cuidar de todas as questões relacionadas aos colaboradores.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="card-servico">
-            <div>
-                <img src="engrenagem.gif" alt="" class="img-servico" width="50px">
-                <p class="titulo-servico">Departamento empresarial</p>
-                <br>
-                <p class="texto-servico">O atendimento inicial de um cliente em potencial para
-                    nossa empresa se faz através de um profissional do
-                    departamento societário.
-                </p>
+            <div class="card-servico">
+                <div>
+                    <img src="engrenagem.gif" alt="" class="img-servico" width="50px">
+                    <p class="titulo-servico">Departamento empresarial</p>
+                    <br>
+                    <p class="texto-servico">O atendimento inicial de um cliente em potencial para
+                        nossa empresa se faz através de um profissional do
+                        departamento societário.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="card-servico">
-            <div>
-                <img src="prancheta.gif" alt="" class="img-servico" width="50px">
-                <p class="titulo-servico">Departamento contábil</p>
-                <br>
-                <p class="texto-servico">Faz a verificação dos dados e a análise dos fatos
-                    contábeis que são fundamentais para uma correta
-                    tomada de decisões no processo de planejamento
-                    empresarial..
-                </p>
+            <div class="card-servico">
+                <div>
+                    <img src="prancheta.gif" alt="" class="img-servico" width="50px">
+                    <p class="titulo-servico">Departamento contábil</p>
+                    <br>
+                    <p class="texto-servico">Faz a verificação dos dados e a análise dos fatos
+                        contábeis que são fundamentais para uma correta
+                        tomada de decisões no processo de planejamento
+                        empresarial..
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="card-servico">
-            <div>
-                <img src="caderno-verificado.gif" alt="" class="img-servico" width="50px">
-                <p class="titulo-servico">Departamento fiscal</p>
-                <br>
-                <p class="texto-servico">Conte com eles para orientação das constantes
-                    alterações na legislação tributária que causam grande
-                    impacto no planejamento tributário das empresas.
-                </p>
+            <div class="card-servico">
+                <div>
+                    <img src="caderno-verificado.gif" alt="" class="img-servico" width="50px">
+                    <p class="titulo-servico">Departamento fiscal</p>
+                    <br>
+                    <p class="texto-servico">Conte com eles para orientação das constantes
+                        alterações na legislação tributária que causam grande
+                        impacto no planejamento tributário das empresas.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="card-servico">
-            <div>
-                <img src="certo.gif" alt="" class="img-servico" width="50px">
-                <p class="titulo-servico">Imposto de renda</p>
-                <br>
-                <p class="texto-servico">Disponibilizam uma dedicação especial no ato da
-                    elaboração de sua Declaração de Imposto de Renda
-                    Pessoa Física
-                </p>
+            <div class="card-servico">
+                <div>
+                    <img src="certo.gif" alt="" class="img-servico" width="50px">
+                    <p class="titulo-servico">Imposto de renda</p>
+                    <br>
+                    <p class="texto-servico">Disponibilizam uma dedicação especial no ato da
+                        elaboração de sua Declaração de Imposto de Renda
+                        Pessoa Física
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="card-servico">
-            <div>
-                <img src="internet.gif" alt="" class="img-servico">
-                <p class="titulo-servico">Ecritório virtual</p>
-                <br>
-                <p class="texto-servico">Escritório Virtual é a solução para quem busca registrar
-                    e legalizar sua atividade de forma simples, rápida e
-                    prática.
-                </p>
+            <div class="card-servico">
+                <div>
+                    <img src="internet.gif" alt="" class="img-servico">
+                    <p class="titulo-servico">Ecritório virtual</p>
+                    <br>
+                    <p class="texto-servico">Escritório Virtual é a solução para quem busca registrar
+                        e legalizar sua atividade de forma simples, rápida e
+                        prática.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
