ajuste texto section um

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <div class="section-um">
         <div class="texto-card">
-            <p class="titulo-um">Acessoria <br> contábil OPTIMER</p>
+            <p class="titulo-um">Assessoria <br> contábil OPTIMER</p>
             <br>
             <p class="texto-um">Nosso escritório contábil é dedicado em entregar 
             com qualidade serviços especializados para empresas
