ajuste texto blog

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
             <div class="cartao-blog">
                 <img class="img-blog" src="blog-4.png" alt="">
-                <p class="titulo-card-blog">Mudado MEI para ME</p>
+                <p class="titulo-card-blog">Mudando MEI para ME</p>
                 <div id="minhaDiv2" style="display: none;">
                     <p class="texto-ver-mais">1 - Avaliação da situação atual do MEI. <br>
                         2 - Revisão dos documentos contábeis. <br>
