ajuste de textos

--- a/index.html
+++ b/index.html
@@ -154,12 +154,14 @@
             <br><br>
             <p class="sub-titulo-tres">Mais de 15 anos conquistando clientes</p>
             <br>
-            <p class="texto-principal-tres">Fundada pela sua diretora Alessandra Neiva Amorim, contadora, 
-                graduada em direito Tributário, especialista em tributos e gestão empresarial. <br><br>
-                A Controller Assessoria Contábil, há mais de duas décadas,
-                consolidando sua posição no mercado Contábil, atuando com excelência
-                em diversos serviços contábeis e contribuindo para saúde financeira de inúmeras
-                empresas, atendendo clientes em todo Brasil.
+            <p class="texto-principal-tres">A Optimer Contabilidade e Gestão Empresarial está no mercado 
+                há 20 anos, e decidiu por inovar e crescer para melhor atender nossos clientes.<br><br>
+                Rodrigo Coelho, Diretor Comercial e Mônica P.
+                Costa Coelho, Diretora Operacional compõem esse
+                time, que investe continuamente em Conhecimento
+                e Tecnologia, seguimos o princípio básico da
+                prestação de serviços de qualidade e eficiência,
+                para melhor te atender. 
             </p>
         </div>
         <img src="img-section-dois.png" alt="" class="img-section-tres">
@@ -296,7 +298,7 @@
     <footer>
         <div class="footer-um">
             <p class="texto-footer">OPTIMER CONTABILIDADE</p>
-            <p class="legenda-footer">Euismod libero faucibus egestas elementum scelerisque porta commodo purus nam. Ante ac egestas duis</p>
+            <p class="legenda-footer">Oferecemos um serviço honesto e de qualidade,com o melhor custo benefício do mercado.</p>
             <div class="redes">
                 <a href=""><img src="insta.png" alt=""></a>
                 <a href=""><img src="face.png" alt=""></a>
