ajuste texto card seviços

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="card-servico">
                 <div>
                     <img src="internet.gif" alt="" class="img-servico">
-                    <p class="titulo-servico">Ecritório virtual</p>
+                    <p class="titulo-servico">Escritório virtual</p>
                     <br>
                     <p class="texto-servico">Escritório Virtual é a solução para quem busca registrar
                         e legalizar sua atividade de forma simples, rápida e
