--- a/index.html
+++ b/index.html
@@ -299,10 +299,6 @@
         <div class="footer-um">
             <p class="texto-footer">OPTIMER CONTABILIDADE</p>
             <p class="legenda-footer">Oferecemos um serviço honesto e de qualidade,com o melhor custo benefício do mercado.</p>
-            <div class="redes">
-                <a href=""><img src="insta.png" alt=""></a>
-                <a href=""><img src="face.png" alt=""></a>
-            </div>
         </div>
         <div class="footer-dois">
             <ul class="lista-footer">
@@ -314,8 +310,12 @@
             </ul>
         </div>
         <div class="footer-tres">
-            <p class="texto-footer">Receba nossas novidades!</p>
-            <div data-respondi-container="" data-respondi-mode="regular" data-respondi-src="https://form.respondi.app/GfrsMgS8" data-respondi-width="400px" data-respondi-height="327px"></div><script>const bodyScript=document.querySelector('body'),hasScript=document.querySelector('#respondi_src');if(!hasScript){const script=document.createElement('script');script.setAttribute("async", "");document.body.appendChild(script),script.id='respondi_src',script.src='https://embed.respondi.app/embed.js';}</script>
+            <p class="texto-footer">Confira nossas redes</p>
+            <div class="redes">
+                <a href="https://www.instagram.com/optimercontabilidade/"><img src="insta.png" alt=""></a>
+                <a href="https://www.facebook.com/optimercontabil"><img src="face.png" alt=""></a>
+            </div>
+            
         </div>
     </footer>
 
