--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a class="menu-item" href="#anchor2">Serviços</a></li>
             <li><a class="menu-item" href="#anchor3">contato</a></li> 
         </ul>
-        <a class="bt-um" href="https://wa.me/5561998495476">ENTRE EM CONTATO</a>
+        <a class="bt-um" href="https://wa.me/5561991281059">ENTRE EM CONTATO</a>
     </nav>
     <hr class="linha">
     
@@ -38,8 +38,8 @@
             </p>
             <br><br>
             <div class="botoes">
-                <a class="bt-dois" href="">Entre em contato</a>
-                <div class="bt-saiba-mais"><a href=""><img src="bt-saiba-mais.svg" alt=""></a></div>
+                <a class="bt-dois" href="https://wa.me/5561991281059">Entre em contato</a>
+                <div class="bt-saiba-mais"><a href="https://wa.me/5561991281059"><img src="bt-saiba-mais.svg" alt=""></a></div>
             </div>
         </div>
         <div class="div-img-principal">
@@ -181,7 +181,7 @@
                     <p class="legenda-suporte">Aqui na Optimer oferecemos o melhor suporte do mercado para sua empresa.</p>
                 </div>
                 <div>
-                    <a class="bt-suporte" href="">Entre em contato</a>
+                    <a class="bt-suporte" href="https://wa.me/5561991281059">Entre em contato</a>
                 </div>
             </div>
             <img class="img-suporte" src="suporte.png" alt="">
@@ -220,7 +220,7 @@
     <div class="blog" data-aos="fade-right">
         <div class="texto-blog">
             <p class="titulo-blog">Tire suas dúvidas</p>
-            <a class="bt-blog" href="">Entre em contato</a>
+            <a class="bt-blog" href="https://wa.me/5561991281059">Entre em contato</a>
         </div>
         <div class="card-blog">
             <div class="cartao-blog">
@@ -306,7 +306,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#anchor">Sobre nós</a></li>
                 <li><a href="#anchor2">Serviços</a></li>
-                <li><a href="#anchor3">Contato</a></li>
+                <li><a href="https://wa.me/5561991281059">Contato</a></li>
             </ul>
         </div>
         <div class="footer-tres">
